force-app/main/default/objects/copado__Compliance_Rule_Criteria__c/fields/copado__Compliance_Rule__c.field-meta.xml
<CustomField>
    <fullName>copado__Compliance_Rule__c</fullName>
    <label>Compliance Rule</label>
    <referenceTo>copado__Compliance_Rule__c</referenceTo>
    <relationshipLabel>Compliance Rule Criteria</relationshipLabel>
    <relationshipName>Compliance_Rule_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>