force-app/main/default/objects/copado__Compliance_Rule_Criteria__c/fields/copado__Criteria__c.field-meta.xml
<CustomField>
    <fullName>copado__Criteria__c</fullName>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>