force-app/main/default/objects/copado__Compliance_Rule_Criteria__c/fields/copado__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>copado__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>