force-app/main/default/objects/copado__Compliance_Rule_Criteria__c/fields/copado__Node__c.field-meta.xml
<CustomField>
    <fullName>copado__Node__c</fullName>
    <label>Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>