force-app/main/default/objects/copado__Compliance_Rule_Criteria__c/fields/copado__Operator__c.field-meta.xml
<CustomField>
    <fullName>copado__Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>